Checkpoint: MP4 形式での出力機能を実装。ffmpeg.wasm を使用して WebM から MP4 に自動変換。出力形式選択ボタンと変換進捗表示を追加。

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
